# dcms

./: .gitignore  AGENTS.md  README.md  dcms_tutorial.ipynb  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: solvers.instructions.md
.ipynb_checkpoints/: AGENTS-checkpoint.md  dcms_tutorial-checkpoint.ipynb
dcms/: __init__.py
dcms/benchmarks/: adecm_comparison.py  dcm_comparison.py  dcm_scaling.py  decm_comparison.py  dwcm_comparison.py
dcms/models/: adecm.py  dcm.py  decm.py  dwcm.py
dcms/solvers/: __init__.py  _numba_kernels.py  base.py  fixed_point_adecm.py  fixed_point_dcm.py  fixed_point_decm.py  fixed_point_dwcm.py
dcms/utils/: __init__.py  backend.py  degree_reduction.py  profiling.py  wng.py
results/: adecm_5k_benchmark.md  dwcm_10k_benchmark.md
results/.ipynb_checkpoints/: daecm_5k_benchmark-checkpoint.md
src/: __init__.py
src/benchmarks/: __init__.py  adecm_comparison.py  daecm_comparison.py  dcm_comparison.py  dcm_scaling.py  decm_comparison.py  dwcm_comparison.py
src/models/: __init__.py  adecm.py  daecm.py  dcm.py  decm.py  dwcm.py  parameters.py
src/solvers/: __init__.py  base.py  broyden.py  daecm_solver.py  fixed_point.py  fixed_point_adecm.py  fixed_point_daecm.py  fixed_point_dcm.py  fixed_point_decm.py  fixed_point_dwcm.py  levenberg_marquardt.py  newton.py  quasi_newton.py
src/utils/: profiling.py  wng.py
tests/: test_adecm.py  test_backend.py  test_daecm.py  test_dcm.py  test_decm.py  test_dwcm.py  test_gauge_fix.py  test_sample.py  test_scaling.py  test_solvers.py
(+16 files in other folders)
