[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcms"
version = "0.3.2"
description = "DCM, DWCM, aDECM and DECM solvers with selectable PyTorch/Numba backend"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest"]
numba = ["numba>=0.57"]

[tool.setuptools.packages.find]
include = ["dcms*"]
